%% Class diagram — Packages, orders, wallet, payments, transaction ledger
%% Package, Order, Wallet, Payment, TransactionLog controllers/services

classDiagram
  direction TB

  namespace Catalog {
    class Package {
      +Id Name Price DurationDays Status Type ImageUrl
    }
  }

  namespace Orders {
    class Order {
      +Id GuardianId StudentId PackageId BusRouteId
      +Status StartDate EndDate PaidAt ExpiredAt
    }
    class Payment {
      +Id OrderId Method Amount Status PaidAt
    }
  }

  namespace WalletLayer {
    class Wallet {
      +Id UserId Balance
    }
    class TransactionLog {
      +Id OrderId Amount Status Method Code
      +OldBalance NewBalance PaidAt Description
    }
  }

  namespace Users {
    class User {
      +Id Email
    }
    class Student {
      +Id FullName
    }
    class BusRoute {
      +Id Name
    }
  }

  User "1" --> "1" Wallet
  User "1" --> "*" Order : Guardian
  Student "1" --> "*" Order
  Package "1" --> "*" Order
  BusRoute "0..1" --> "*" Order
  Order "1" --> "*" Payment
  Order "1" --> "*" TransactionLog
  User "1" --> "*" TransactionLog : guardian flows
